# OpenEyes

./: .coverage  .gitignore  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURAL_SHIFT.md  CLI_METRICS_GUIDE.md  CLI_PROTOCOL.md  COGNITIVE_MANIFESTOR_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CRITICAL_ANALYSIS_REPORT.md  IMPLEMENTATION_PROGRESS_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE  MATHEMATICAL_FRAMEWORKS.md  MIGRATION_COMPLETE_REPORT.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  OPENEYES_FRAMEWORKS.md  OPENEYES_REFACTOR_PLAN.md  P4_SYNTHESIS_REPORT.md  PHASES_1_4_IMPLEMENTATION_SUMMARY.md  POST_IMPLEMENTATION_TEST_REPORT.md  PROCEDURAL_MANIFESTOR_REPORT.md  PRUNING_REPORT.md  README.md  REALITY_CHECK_ANALYSIS.md  REASONING_ENGINE_REPORT.md  STRATEGIC_IMPLEMENTATION_COMPLETE.md  TEST_REPORT.md  TEST_SUITE_SUMMARY_REPORT.md  THREE_DOMAIN_TEST_REPORT.md  app.py  build_all_enr.py  build_enr_final.py  build_geo_fragments_part1.py  build_geo_fragments_part2.py  build_geo_fragments_part4.py  create_mac_fragments.py  final_ipl_gen.py  fix_all_fragments.py  generate_ipl_complete.py  (+21 more)
openeyes/: .gitignore  README.md  __init__.py  akinator_engine.py  binary_lib.py  cli.py  cognitive_manifestor.py  config.py  fragment_library.py  identity.py  knowledge.oelib  main_unified.py  phase1_4_pipeline.py  phase1_lexical_engine.py  phase2_domain_router.py  phase3_boolean_gates.py  phase4_fuzzy_logic.py  phase5_cfg_compiler.py  pyproject.toml  sleep_manager.py  talk_test_harness.py
openeyes/cellular_automata/: __init__.py
openeyes/citation_maps/: citation_20260510_112759.json
(+18927 files in other folders)
