[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openeyes"
version = "1.0.0"
description = "High-Stakes Deterministic Chaos Reasoning Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
]

[project.scripts]
openeyes = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["openeyes*"]
